[gd_scene load_steps=11 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://AI_Player.gd" type="Script" id=3]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.08502, 30.0159 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 300, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 300, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 300, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 300, 10 )

[node name="Game" type="Node"]
script = ExtResource( 1 )
recordStats = true

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 30, 300 )
scale = Vector2( 1, 10 )
input_pickable = false

[node name="AI_Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 570, 300 )
script = ExtResource( 3 )

[node name="StaticBody2D" type="Area2D" parent="AI_Player"]

[node name="Area2D" type="CollisionShape2D" parent="AI_Player/StaticBody2D"]
position = Vector2( -14.0107, 3.05176e-05 )
shape = SubResource( 1 )

[node name="Ball" parent="." groups=[
"ball",
] instance=ExtResource( 4 )]
position = Vector2( 300, 300 )

[node name="GUI" parent="." instance=ExtResource( 5 )]
offset = Vector2( 0, 600 )
transform = Transform2D( 1, 0, 0, 1, 0, 600 )

[node name="SaveButton" type="Button" parent="GUI"]
margin_left = 40.0
margin_top = 40.0
margin_right = 140.0
margin_bottom = 90.0
text = "Save"

[node name="LoadButton" type="Button" parent="GUI"]
margin_left = 40.0
margin_top = 130.0
margin_right = 140.0
margin_bottom = 180.0
text = "Load"

[node name="SaveTextBox" type="LineEdit" parent="GUI"]
margin_left = 180.0
margin_top = 52.5
margin_right = 380.0
margin_bottom = 77.5
placeholder_text = "Save Filename"

[node name="LoadTextBox" type="LineEdit" parent="GUI"]
margin_left = 180.0
margin_top = 142.5
margin_right = 380.0
margin_bottom = 167.5
placeholder_text = "Load Filename"

[node name="PlayMode" type="CheckButton" parent="GUI"]
margin_left = 420.0
margin_top = 130.0
margin_right = 496.0
margin_bottom = 180.0

[node name="Label" type="Label" parent="GUI"]
margin_left = 410.64
margin_top = 115.868
margin_right = 510.64
margin_bottom = 140.868
text = "Play w/o Training"

[node name="BoundingBody" type="StaticBody2D" parent="."]

[node name="TopWall" type="CollisionShape2D" parent="BoundingBody"]
position = Vector2( 300, 0 )
shape = SubResource( 2 )

[node name="BottomWall" type="CollisionShape2D" parent="BoundingBody"]
position = Vector2( 300, 598.604 )
shape = SubResource( 3 )

[node name="AreaGoalP" type="Area2D" parent="."]

[node name="PlayerGoal" type="CollisionShape2D" parent="AreaGoalP" groups=[
"PlayerGoal",
]]
position = Vector2( 0, 300 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="AreaGoalAI" type="Area2D" parent="AreaGoalP"]

[node name="AIGoal" type="CollisionShape2D" parent="AreaGoalP/AreaGoalAI" groups=[
"AIGoal",
]]
position = Vector2( 576, 300 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="StatsTimer" type="Timer" parent="."]
[connection signal="punish_AI" from="." to="AI_Player" method="_on_Game_punish_AI"]
[connection signal="body_entered" from="AI_Player/StaticBody2D" to="AI_Player" method="_on_AI_Good_Boi"]
[connection signal="Moved_Tile" from="Ball" to="AI_Player" method="_on_Ball_Moved_Tile"]
[connection signal="pressed" from="GUI/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="GUI/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="GUI/PlayMode" to="." method="_on_PlayMode_pressed"]
[connection signal="body_entered" from="AreaGoalP" to="." method="_on_AreaGoalP_body_entered"]
[connection signal="body_entered" from="AreaGoalP/AreaGoalAI" to="." method="_on_AreaGoalAI_body_entered"]
[connection signal="timeout" from="StatsTimer" to="." method="_on_StatsTimer_timeout"]
